2012-06-06  Mariusz Grzegorczyk  <mariusz.g@samsung.com>

        [EFL][WK2] Compile webkit1 and webkit2 by default.
        https://bugs.webkit.org/show_bug.cgi?id=85041

        Reviewed by Chang Shu.

        Compile webkit1 and webkit2 while running Tools/Scripts/build-webkit --efl.
        Webkit2 build can be skipped by adding --no-webkit2 option to build-webkit script.

        * Scripts/build-webkit:

2012-06-06  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r119662.
        http://trac.webkit.org/changeset/119662
        https://bugs.webkit.org/show_bug.cgi?id=88487

        Broke builds (Requested by rniwa on #webkit).

        * DumpRenderTree/DumpRenderTree.gyp/DumpRenderTree.gyp:
        * DumpRenderTree/chromium/ImageDiff.cpp:
        (untestedCompareImages):

2012-06-06  Xianzhu Wang  <wangxianzhu@chromium.org>

        [Chromium] Remove header dependency of ImageDiff to WTF
        https://bugs.webkit.org/show_bug.cgi?id=88422

        Reviewed by Adam Barth.

        * DumpRenderTree/DumpRenderTree.gyp/DumpRenderTree.gyp:
        * DumpRenderTree/chromium/ImageDiff.cpp:
        (untestedCompareImages):

2012-06-06  Amy Ousterhout  <aousterh@chromium.org>

        [WebKit] DeviceOrientation cleanup
        https://bugs.webkit.org/show_bug.cgi?id=88406

        Reviewed by Kent Tamura.

        Updated LayoutTestController to use new public default constructor in WebDeviceOrientation.h.

        * DumpRenderTree/chromium/LayoutTestController.cpp:
        (LayoutTestController::setMockDeviceOrientation):

2012-05-29  Dirk Pranke  <dpranke@chromium.org>

        webkitpy: add support for an ordered dict of test expectations
        https://bugs.webkit.org/show_bug.cgi?id=87802

        Reviewed by Ojan Vafai.

        As per https://bugs.webkit.org/show_bug.cgi?id=65834 we want to
        support a cascaded list of test expectations files. An easy way
        to think of this is as an ordered dictionary of name -> contents