@@ -1,3 +1,14 @@
+2012-06-06  Kenneth Rohde Christiansen  <kenneth@webkit.org>
+
+        [Qt] Improve the visual of the viewport info box
+        https://bugs.webkit.org/show_bug.cgi?id=88410
+
+        Reviewed by Tor Arne Vestbø.
+
+        Improve the visual and make it possible to see the content more easy.
+
+        * MiniBrowser/qt/qml/ViewportInfoItem.qml:
+
 2012-06-06  Mariusz Grzegorczyk  <mariusz.g@samsung.com>
 
         [EFL][WK2] Compile webkit1 and webkit2 by default.
